--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,6 @@
         </android.support.design.widget.ToolbarLayout> -->
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main"/>
+    <include layout="@layout/fragment_main"/>
 
 </android.support.design.widget.CoordinatorLayout>
