--- a/app/src/main/res/layout/fragment_ingredient_detail.xml
+++ b/app/src/main/res/layout/fragment_ingredient_detail.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp">
 
-    <TextView
-        android:id="@+id/ingredient_name_text"
-        style="@style/text_field_style"
-        android:text="@string/ingredient_name"
-        android:layout_alignBaseline="@+id/ingredient_name_edit"/>
 
     <EditText
         android:id="@+id/ingredient_name_edit"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/default_text_format"
         android:inputType="text"
-        android:layout_alignRight="@+id/ingredient_irritant_checkbox"
-        android:layout_alignEnd="@+id/ingredient_irritant_checkbox"/>
+        android:background="#fffffd"
+        android:text="@string/ingredient_name"
+        android:textColor="#a6a6a6"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        />
 
     <CheckBox
         android:id="@+id/ingredient_irritant_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/default_text_format"
+        android:textSize="20sp"
         android:text="@string/ingredient_irritant"
-        android:layout_below="@+id/ingredient_name_text"/>
+        android:layout_below="@+id/ingredient_name_edit"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"/>
 
-    <TextView
-        android:id="@+id/ingredient_comment_name_text"
-        style="@style/text_field_style"
-        android:layout_below="@id/ingredient_irritant_checkbox"
-        android:text="@string/ingredient_comment"/>
 
     <EditText
         android:id="@+id/ingredient_comment_edit"
@@ -38,7 +36,35 @@
         android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ingredient_comment_name_text"
+        android:layout_below="@id/ingredient_irritant_checkbox"
+        android:textSize="20sp"
+        android:text="@string/ingredient_comment"
+        android:textColor="#a6a6a6"
         />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+        <!-- TODO better button coloring -->
+        <Button
+            android:id="@+id/ingredient_delete_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/delete_button"
+            android:backgroundTint="@color/deleteButton"
+            android:textColor="#ffffff"
+            />
+
+        <Button
+            android:id="@+id/ingredient_save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/save_button"
+            android:backgroundTint="@color/colorPrimary"
+            android:textColor="#ffffff"/>
+    </LinearLayout>
 
 </RelativeLayout>
