--- a/app/src/main/res/layout/fragment_ingredient_main.xml
+++ b/app/src/main/res/layout/fragment_ingredient_main.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <ListView
+        android:id="@+id/ingredient_main_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="350dp"
+        android:padding="20dp"
+        >
 
-</LinearLayout>
+    </ListView>
+
+    <Button
+        android:id="@+id/ingredient_main_new_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ingredient_main_list_view"
+        android:layout_centerHorizontal="true"
+        android:text="@string/new_ingredient"
+        android:background="@color/colorPrimary"
+        android:padding="10dp"
+        android:textColor="#ffffff"/>
+
+</RelativeLayout>
