--- a/app/src/main/res/layout/ingredient_listview_item.xml
+++ b/app/src/main/res/layout/ingredient_listview_item.xml
@@ -2,6 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/ingredient_list_view_item"
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_height="wrap_content"
+          android:textSize="15sp"
+          android:padding="5dp"
+          >
 
 </TextView>
