Add delete functionality to ingredient. Add product classes.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,9 @@
 
     <!--Button Colors-->
     <color name="deleteButton">#fe5d5d</color>
+
+    <!-- General Use -->
+    <color name="black">#000000</color>
+    <color name="newText">#a6a6a6</color>
+    <color name="textBoxBackground">#f2f2f2</color>
 </resources>
