--- a/app/src/main/res/layout/fragment_ingredient_detail.xml
+++ b/app/src/main/res/layout/fragment_ingredient_detail.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="20dp"
+    android:focusableInTouchMode="true">
 
 
     <EditText
         android:id="@+id/ingredient_name_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/default_text_format"
-        android:inputType="text"
-        android:background="#fffffd"
+        style="@style/edit_text_format"
+        android:background="@color/textBoxBackground"
         android:text="@string/ingredient_name"
-        android:textColor="#a6a6a6"
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
         />
@@ -32,14 +32,12 @@
 
     <EditText
         android:id="@+id/ingredient_comment_edit"
-        style="@style/default_text_format"
-        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ingredient_irritant_checkbox"
+        style="@style/edit_text_format"
         android:textSize="20sp"
         android:text="@string/ingredient_comment"
-        android:textColor="#a6a6a6"
+        android:layout_below="@id/ingredient_irritant_checkbox"
         />
 
     <LinearLayout
