--- a/app/src/main/res/layout/ingredient_listview_item.xml
+++ b/app/src/main/res/layout/ingredient_listview_item.xml
@@ -4,6 +4,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="15sp"
+          android:textColor="@color/black"
           android:padding="5dp"
           >
 
