--- a/app/src/main/res/layout/fragment_product_main.xml
+++ b/app/src/main/res/layout/fragment_product_main.xml
@@ -3,4 +3,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <ListView
+        android:id="@+id/product_main_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/product_main_new_button"
+        android:layout_margin="10dp"
+        android:background="@drawable/rectangle_border"
+        android:layout_alignParentTop="true"
+        >
+
+    </ListView>
+
+    <Button
+        android:id="@+id/product_main_new_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/new_product"
+        android:background="@color/colorPrimary"
+        android:textColor="#ffffff"
+        android:padding="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"/>
+
 </RelativeLayout>
