--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -5,38 +5,63 @@
                 android:padding="20dp"
                 android:focusableInTouchMode="true">
 
-    <EditText
-        android:id="@+id/product_name_edit"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/layout_name_text_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/product_name_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/edit_text_format"
+            android:background="@color/textBoxBackground"
+            android:hint="@string/product_name_string"
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"
+            />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/layout_brand_text_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/edit_text_format"
-        android:background="@color/textBoxBackground"
-        android:text="@string/product_name_string"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        />
+        android:layout_below="@id/layout_name_text_input">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/product_brand_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/brand_string"
+            />
+    </android.support.design.widget.TextInputLayout>
+
+
 
     <LinearLayout
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/product_name_edit">
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
 
-        <TextView
-            android:layout_width="0dp"
+        <!-- TODO better button coloring -->
+        <Button
+            android:id="@+id/product_delete_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/brand_string"
-            android:layout_weight="1"
-            style="@style/default_text_format"/>
+            android:text="@string/delete_button_string"
+            android:backgroundTint="@color/deleteButton"
+            android:textColor="#ffffff"
+            />
 
-        <EditText
-            android:id="@+id/product_brand_edit"
-            android:layout_width="0dp"
+        <Button
+            android:id="@+id/product_save_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            style="@style/edit_text_format"
-            android:background="@color/textBoxBackground"/>
-
+            android:text="@string/save_button_string"
+            android:backgroundTint="@color/colorPrimary"
+            android:textColor="#ffffff"/>
     </LinearLayout>
 
 </RelativeLayout>
