Implement loading layout for accessing database. Add spinner to products.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,6 @@
 
     <!-- General Use -->
     <color name="black">#000000</color>
-    <color name="newText">#a6a6a6</color>
+    <color name="newText">#808080</color>
     <color name="textBoxBackground">#f2f2f2</color>
 </resources>
