--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -5,39 +5,88 @@
                 android:padding="20dp"
                 android:focusableInTouchMode="true">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/layout_name_text_input"
+    <RelativeLayout
+        android:id="@+id/product_loading_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:gravity="center">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/product_name_edit"
-            android:layout_width="match_parent"
+        <ProgressBar
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/edit_text_format"
-            android:background="@color/textBoxBackground"
-            android:hint="@string/product_name_string"
-            android:layout_centerHorizontal="true"
-            android:gravity="center_horizontal"
-            />
+            android:indeterminate="true"/>
 
-    </android.support.design.widget.TextInputLayout>
+    </RelativeLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/layout_brand_text_input"
+    <RelativeLayout
+        android:id="@+id/product_fragment_detail_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/layout_name_text_input">
+        >
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/product_brand_edit"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/layout_name_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/brand_string"
-            />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_marginBottom="20dp">
 
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/product_name_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/edit_text_format"
+                android:background="@color/textBoxBackground"
+                android:hint="@string/product_name_string"
+                android:layout_centerHorizontal="true"
+                android:gravity="center_horizontal"
+                />
 
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/layout_brand_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_name_text_input"
+            android:layout_marginBottom="20dp">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/product_brand_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/brand_string"
+                />
+        </android.support.design.widget.TextInputLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_type_layout"
+            android:layout_below="@id/layout_brand_text_input"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/product_type"
+                style="@style/default_field_label_format"
+                android:layout_weight="1"/>
+
+            <Spinner
+                android:id="@+id/product_type_spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                >
+
+            </Spinner>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -63,5 +112,4 @@
             android:backgroundTint="@color/colorPrimary"
             android:textColor="#ffffff"/>
     </LinearLayout>
-
 </RelativeLayout>
