--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,16 +17,20 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
-    <style name="edit_text_format" parent="default_text_format">
+    <style name="edit_text_format" parent="default_name_text_format">
         <item name="android:selectAllOnFocus">true</item>
         <item name="android:imeOptions">actionDone</item>
         <item name="android:inputType">text</item>
-
     </style>
     
-    <style name="default_text_format">
+    <style name="default_name_text_format">
         <item name="android:textSize">30sp</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="default_field_label_format">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/newText</item>
     </style>
     
 </resources>
