--- a/app/src/main/res/drawable/rectangle_border.xml
+++ b/app/src/main/res/drawable/rectangle_border.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <stroke android:width="1dp" android:color="#696969"/>
+    <stroke android:width="1dp" android:color="@color/listViewBorder"/>
 </shape>
