Add skeleton support for routines. Create routine layout. Change softInputMode to adjustPan for detail activities.

--- a/app/src/main/res/layout/fragment_routine_detail.xml
+++ b/app/src/main/res/layout/fragment_routine_detail.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="20dp"
-                android:focusableInTouchMode="true">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:focusableInTouchMode="true"
+            android:padding="20dp">
 
     <RelativeLayout
-        android:id="@+id/product_loading_layout"
+        android:id="@+id/routine_loading_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="invisible">
 
         <ProgressBar
             android:layout_width="wrap_content"
@@ -19,12 +20,10 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/product_fragment_detail_layout"
+        android:id="@+id/routine_fragment_detail_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/product_button_layout"
-        android:layout_marginBottom="20dp"
-        >
+        android:layout_marginBottom="20dp">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layout_name_text_input"
@@ -33,81 +32,71 @@
             android:layout_marginBottom="20dp">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/product_name_edit"
+                android:id="@+id/routine_name_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/header_name_text_style"
                 android:background="@color/textBoxBackground"
-                android:hint="@string/product_name_string"
+                android:hint="@string/routine_name_string"
                 android:layout_centerHorizontal="true"
-                android:gravity="center_horizontal"
-                />
+                android:gravity="center_horizontal"/>
 
         </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/layout_brand_text_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/layout_name_text_input"
-            android:layout_marginBottom="20dp">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/product_brand_edit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/default_edit_text_style"
-                android:hint="@string/brand_string"
-                />
-        </android.support.design.widget.TextInputLayout>
-
-        <LinearLayout
-            android:id="@+id/product_type_layout"
-            android:layout_below="@id/layout_brand_text_input"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/product_type"
-                style="@style/default_field_label_format"
-                android:layout_weight="1"/>
-
-            <Spinner
-                android:id="@+id/product_type_spinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                >
-
-            </Spinner>
-
-        </LinearLayout>
 
         <RelativeLayout
-            android:id="@+id/product_ingredient_list_layout"
+            android:id="@+id/routine_layout_radio_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/product_type_layout">
+            android:layout_below="@id/layout_name_text_input">
+
+            <TextView
+                android:id="@+id/routine_application_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/routine_application_time"
+                style="@style/default_field_label_format"
+                android:gravity="center_horizontal"/>
+
+            <RadioGroup
+                android:id="@+id/routine_radio_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@id/routine_application_text"
+                android:gravity="center_horizontal">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/routine_radio_AM"/>
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/routine_radio_PM"/>
+
+            </RadioGroup>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/routine_layout_product_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/routine_layout_radio_buttons">
 
             <LinearLayout
-                android:id="@+id/product_ingredient_title_layout"
+                android:id="@+id/routine_product_title_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
 
                 <TextView
-                    android:id="@+id/product_ingredient_list_title_text"
+                    android:id="@+id/routine_product_list_title_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/product_ingredients"
+                    android:text="@string/routine_products"
                     style="@style/default_field_label_format"
                     />
 
@@ -117,7 +106,7 @@
                     android:layout_weight="1"/>
 
                 <Button
-                    android:id="@+id/product_edit_ingredients"
+                    android:id="@+id/routine_edit_products"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/edit_string"
@@ -127,40 +116,57 @@
             </LinearLayout>
 
             <ListView
-                android:id="@+id/product_ingredient_list"
-                android:layout_below="@id/product_ingredient_title_layout"
-                android:layout_height="match_parent"
+                android:id="@+id/routine_product_list"
+                android:layout_below="@id/routine_product_title_layout"
+                android:layout_height="100dp"
                 android:layout_width="match_parent"
                 android:background="@drawable/rectangle_border">
             </ListView>
 
         </RelativeLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/routine_layout_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/routine_layout_product_list">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/routine_comment_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/default_edit_text_style"
+                android:hint="@string/routine_comment"
+                />
+
+        </android.support.design.widget.TextInputLayout>
+
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@id/product_button_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        >
 
-        <!-- TODO better button coloring -->
         <Button
-            android:id="@+id/product_delete_button"
+            android:id="@+id/routine_delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/delete_button_string"
             android:backgroundTint="@color/deleteButton"
-            android:textColor="@color/white"
-            />
+            android:textColor="@color/white"/>
 
         <Button
-            android:id="@+id/product_save_button"
+            android:id="@+id/routine_save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save_button_string"
             android:backgroundTint="@color/colorPrimary"
             android:textColor="@color/white"/>
+
+
     </LinearLayout>
+
 </RelativeLayout>
